--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,500" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="../node_modules/evil-icons/assets/evil-icons.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!--
